--- a/packages/reports/app/styles/navi-reports/components/navi-table-select-trigger.less
+++ b/packages/reports/app/styles/navi-reports/components/navi-table-select-trigger.less
@@ -7,6 +7,7 @@
   display: flex;
   flex: 1;
   padding: 0 10px;
+  min-width: 0;
 
   &__label {
     font-size: @font-size-base;
